# ecomp_experiment

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: build.yml  style.yml  test.yml
EEG/: README.md
ecomp_experiment/: __init__.py  define_eyetracking.py  define_monitors.py  define_routines.py  define_settings.py  define_stimuli.py  define_trials.py  define_ttl.py  define_ttl_dict.py  define_ttl_triggers.py  main.py  utils.py
ecomp_experiment/tests/: test_define_eyetracking.py  test_define_monitors.py  test_define_trials.py  test_define_ttl.py  test_define_ttl_dict.py  test_utils.py
ecomp_experiment/tests/data/: samples-10_stream-dual_beh.tsv  samples-10_stream-single_beh.tsv
experiment_data/: README.md
eye-tracking/: README.md  try_eyelink.py
