[metadata]
name = ecomp_experiment
version = attr: ecomp_experiment.__version__
url = https://github.com/sappelhoff/ecomp_experiment
author = Stefan Appelhoff
maintainer = Stefan Appelhoff
maintainer_email = stefan.appelhoff@mailbox.org
description = This Python package implements the eComp experiment.
long-description = file: README.md
long-description-content-type = text/markdown
keywords = EEG neuroscience neuroimaging python electroencephalography
license = MIT
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Programming Language :: Python :: 3
  Intended Audience :: Science/Research
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
project_urls =
  Bug Reports = https://github.com/sappelhoff/ecomp_experiment/issues
  Source = https://github.com/sappelhoff/ecomp_experiment

[options]
python_requires = >= 3.8
packages = find:
include_package_data = True

[options.packages.find]
exclude =
  tests

[bdist_wheel]
universal = true

[flake8]
docstring-convention = numpy
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
  # See https://github.com/PyCQA/pycodestyle/issues/373
  E203

[isort]
profile=black

[coverage:run]
omit =
  # Do not include test script in coverage report
  *tests*
  setup.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover

  # Don't complain if non-runnable code isn't run:
  if 0:
  if __name__ == .__main__.:
